<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.marvindaviddiaz</groupId>
    <artifactId>tesis-licenciatura</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>servicios-ficticios-terceros</module>
        <module>arquitectura-monolitica</module>
        <module>arquitectura-serverless</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.1.1</version>
                    <dependencies>
                        <dependency>
                            <!-- MSHARED-494: avoid timestamps in pom.properties -->
                            <groupId>org.apache.maven</groupId>
                            <artifactId>maven-archiver</artifactId>
                            <version>3.1.1</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>io.github.zlika</groupId>
                    <artifactId>reproducible-build-maven-plugin</artifactId>
                    <version>0.9</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>strip-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
